# ScottLi023-RDK_X5_Anti-Face-Recognition

./: .gitignore  CMakeLists.txt  README.md  face_liveness.cpp  face_liveness.h  main.cc
python/: 1.sh  face_recognition.py  face_recognition_web.py  face_register.py  registered_faces.pkl  requirement.txt
python/models/: __init__.py  tflite_model.py
python/utils/: load_lib.py
weights/: mobilenetv3_small_mcp_fp16.tflite
